# sparkplayer

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: release.yml
crates/sparkplayer-core/: Cargo.toml
crates/sparkplayer-core/src/: app.rs  audio_tap.rs  backend.rs  config.rs  lib.rs  library.rs  metadata.rs  subtitles.rs  theme.rs  visualizer.rs
crates/sparkplayer-core/src/ui/: cassette.rs  mod.rs  overlays.rs  palette.rs  panels.rs  video_panel.rs  visualizers.rs
crates/sparkplayer-native/: Cargo.toml
crates/sparkplayer-native/src/: audio.rs  backends.rs  external_window.rs  library_native.rs  main.rs  media_controls.rs  metadata_native.rs  shared_audio.rs  subtitles_native.rs  video.rs
crates/sparkplayer-native/wix/: License.rtf  main.wxs
crates/sparkplayer-web/: Cargo.toml  Trunk.toml  index.html  manifest.json
crates/sparkplayer-web/src/: album_art.rs  audio.rs  lib.rs  library.rs  metadata_web.rs  video.rs
src/: app.rs  audio.rs  config.rs  external_window.rs  library.rs  main.rs  metadata.rs  subtitles.rs  theme.rs  ui.rs  video.rs  visualizer.rs
src/ui/: overlays.rs  panels.rs
