[package]
name = "sparkplayer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
rodio = { version = "0.17", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.2"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
lofty = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ratatui-image = "4"
walkdir = "2"

[profile.release]
opt-level = 3
lto = "thin"
