[workspace]
resolver = "2"
members = [
    "crates/sparkplayer-core",
    "crates/sparkplayer-native",
    "crates/sparkplayer-web",
]
# Plain `cargo build` / `cargo test` target the host-native crates. The web
# crate is built for wasm32 via Trunk (see README), so it's excluded here to
# keep host builds fast and meaningful.
default-members = [
    "crates/sparkplayer-core",
    "crates/sparkplayer-native",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
authors = ["dividebysandwich"]
license = "GPL-2.0-only"
repository = "https://github.com/dividebysandwich/sparkplayer"

[profile.release]
opt-level = 3
lto = "thin"
