[package]
name = "sparkplayer-web"
description = "Browser/WASM build of SparkPlayer, rendered with Ratzilla."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sparkplayer-core = { path = "../sparkplayer-core" }
ratzilla = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
anyhow = "1.0"
console_error_panic_hook = "0.1"
# Pure-Rust tag reader — parses picked local files' metadata + embedded cover
# art from their bytes (works on wasm32; no filesystem needed).
lofty = "0.24"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "Performance",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlAudioElement",
    "HtmlVideoElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "HtmlMediaElement",
    "AudioContext",
    "AudioContextState",
    "AudioNode",
    "AudioDestinationNode",
    "AnalyserNode",
    "MediaElementAudioSourceNode",
    "GainNode",
    "AudioParam",
    "File",
    "FileList",
    "Blob",
    "Url",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "DragEvent",
    "DataTransfer",
    "CssStyleDeclaration",
    "DomRect",
    "DomRectReadOnly",
    "Response",
    "Request",
    "RequestInit",
    "Storage",
]
